pyg.exe.log
Traceback (most recent call last):
  File "pyg.py", line 22, in <module>
  File "runpy.pyc", line 240, in run_path
  File "runpy.pyc", line 82, in _run_module_code
  File "runpy.pyc", line 72, in _run_code
  File "blockrush.py", line 66, in <module>
    x += player_size
NameError: name 'x' is not defined
Traceback (most recent call last):
  File "pyg.py", line 22, in <module>
  File "runpy.pyc", line 239, in run_path
  File "runpy.pyc", line 220, in _get_code_from_file
  File "blockrush.py", line 76
    player_pos = [x, y]
    ^
IndentationError: unexpected indent
Traceback (most recent call last):
  File "pyg.py", line 22, in <module>
  File "runpy.pyc", line 240, in run_path
  File "runpy.pyc", line 82, in _run_module_code
  File "runpy.pyc", line 72, in _run_code
  File "blockrush.py", line 76, in <module>
    x = x % window.get_width()
NameError: name 'window' is not defined
Traceback (most recent call last):
  File "pyg.py", line 22, in <module>
  File "runpy.pyc", line 240, in run_path
  File "runpy.pyc", line 82, in _run_module_code
  File "runpy.pyc", line 72, in _run_code
  File "blockrush.py", line 76, in <module>
    x = x % window.get_width()
NameError: name 'window' is not defined
Traceback (most recent call last):
  File "pyg.py", line 22, in <module>
  File "runpy.pyc", line 240, in run_path
  File "runpy.pyc", line 82, in _run_module_code
  File "runpy.pyc", line 72, in _run_code
  File "blockrush.py", line 78, in <module>
    if self.rect.right > WIDTH:
NameError: name 'self' is not defined
Traceback (most recent call last):
  File "pyg.py", line 22, in <module>
  File "runpy.pyc", line 239, in run_path
  File "runpy.pyc", line 220, in _get_code_from_file
  File "blockrush.py", line 75
    self.rect.right = WIDTH
       ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "pyg.py", line 22, in <module>
  File "runpy.pyc", line 240, in run_path
  File "runpy.pyc", line 82, in _run_module_code
  File "runpy.pyc", line 72, in _run_code
  File "blockrush.py", line 74, in <module>
    if pressed[pygame.K_UP] and y > 0:
NameError: name 'pressed' is not defined
Traceback (most recent call last):
  File "pyg.py", line 22, in <module>
  File "runpy.pyc", line 240, in run_path
  File "runpy.pyc", line 82, in _run_module_code
  File "runpy.pyc", line 72, in _run_code
  File "blockrush.py", line 59, in <module>
    hit = pygame.sprite.spritecollide(player_pos, enemy_pos)
TypeError: spritecollide() takes at least 3 arguments (2 given)
Traceback (most recent call last):
  File "pyg.py", line 22, in <module>
  File "runpy.pyc", line 240, in run_path
  File "runpy.pyc", line 82, in _run_module_code
  File "runpy.pyc", line 72, in _run_code
  File "blockrush.py", line 76, in <module>
    if detect_collision(player_pos, enemy_pos):
  File "blockrush.py", line 45, in detect_collision
    p_x = player_pos[0]
IndexError: list index out of range
Traceback (most recent call last):
  File "pyg.py", line 22, in <module>
  File "runpy.pyc", line 240, in run_path
  File "runpy.pyc", line 82, in _run_module_code
  File "runpy.pyc", line 72, in _run_code
  File "blockrush.py", line 71, in <module>
    if pressed[K_RIGHT] and x < WIDTH - 60:
NameError: name 'K_RIGHT' is not defined
